protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_service-3.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_service() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Service {
        name: Ident {
            value: "Foo",
            span: 30..33,
        },
        options: [],
        methods: [],
        comments: Comments {
            leading_detached_comments: [
                "detached\n",
            ],
            leading_comment: Some(
                "leading\n",
            ),
            trailing_comment: None,
        },
        span: 22..58,
    },
)
